--- a/website_4cs/public/css/custom.css
+++ b/website_4cs/public/css/custom.css
@@ -2,14 +2,27 @@
 # Terms of Service
 --------------------------------------------------------------*/
 
-#terms {
+#terms, #education, #healthcare, #fleet {
     padding: 120px 0;
 }
 
-#terms p {
+p {
   text-align: justify;
 }
 
 #header {
     background: rgba(0, 0, 0, 0.9);
+}
+
+.card {
+  z-index: 10;
+  margin: 20px;
+}
+
+.card-body {
+  color: #8d99a6;
+}
+
+.card-body .card-title, .card-body h5 {
+  color: #000000;
 }
