--- a/website_4cs/templates/master.html
+++ b/website_4cs/templates/master.html
@@ -5,6 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>{% block title %} {{ title | striptags }} {% endblock %}</title>
+	<meta name=”robots” content=”nofollow”>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta content="" name="keywords">
 	<meta content="" name="description">
