--- a/website_4cs/templates/includes/intro/intro.html
+++ b/website_4cs/templates/includes/intro/intro.html
@@ -1,6 +1,26 @@
 <!--==========================
     Intro Section
 ============================-->
+
+<!-- ======= Intro Section ======= -->
+<div id="home" class="intro route bg-image" style="background-image: url(/assets/website_4cs/images/intro-bg.png)">
+    <div class="overlay-itro"></div>
+    <div id="particles-js">
+        <div class="intro-content display-table">
+            <div class="table-cell">
+                <div class="container">
+                    <h1 class="intro-title mb-4"><span class="text-slider-items">ERP Education,ERP Healthcare,
+                            Fleet Management</span><strong class="text-slider"></strong></h1>
+                    <p class="intro-subtitle">Digital Transformation, From <span style="color: red; font-weight:bold">Paper</span> to <span
+                            style="color:chartreuse; font-weight:bold">Paperless</span></p>
+                    <a href="#services" class="btn-get-started scrollto">Get Started</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div><!-- End Intro Section -->
+
+<!--
 <section id="intro">
     <div class="intro-container">
         <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
@@ -36,4 +56,5 @@
 
         </div>
     </div>
-</section><!-- #intro -->
+</section-->
+<!-- #intro -->
