--- a/website_4cs/templates/includes/scripts.html
+++ b/website_4cs/templates/includes/scripts.html
@@ -11,5 +11,8 @@
 <script type="text/javascript" src="/assets/website_4cs/js/isotope.pkgd.min.js"></script>
 <script type="text/javascript" src="/assets/website_4cs/js/lightbox.min.js"></script>
 <script type="text/javascript" src="/assets/website_4cs/js/jquery.touchSwipe.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/typed.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/particles.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/particles.js"></script>
 <script type="text/javascript" src="/assets/website_4cs/js/contactform.js"></script>
 <script type="text/javascript" src="/assets/website_4cs/js/main.js"></script>
