--- a/website_4cs/templates/includes/navbar/4cs_navbar.html
+++ b/website_4cs/templates/includes/navbar/4cs_navbar.html
@@ -1,13 +1,13 @@
 <div class="container-fluid">
     <div id="logo" class="pull-left">
-        <h1><a href="/#intro" class="scrollto">4C Solutions</a></h1>
+        <h1><a href="/#home" class="scrollto">4C Solutions</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>-->
     </div>
 
     <nav id="nav-menu-container">
         <ul class="nav-menu">
-            <li class="menu-active"><a href="/#intro">Home</a></li>
+            <li class="menu-active"><a href="/#home">Home</a></li>
             <li><a href="/#about">About Us</a></li>
             <li><a href="/#services">Services</a></li>
             <li><a href="/#clients">Clientele</a></li>
