--- a/website_4cs/templates/master.html
+++ b/website_4cs/templates/master.html
@@ -27,7 +27,7 @@
 		{%- endblock -%}
 	</header>
 
-	{% block carousel %}{% endblock %}
+	{% block intro %}{% endblock %}
 	{% block content %}{% endblock %}
 
 	{%- block footer -%}
