--- a/website_4cs/templates/includes/intro/intro.html
+++ b/website_4cs/templates/includes/intro/intro.html
@@ -11,7 +11,8 @@
                 <div class="container">
                     <h1 class="intro-title mb-4"><span class="text-slider-items">ERP Education,ERP Healthcare,
                             Fleet Management</span><strong class="text-slider"></strong></h1>
-                    <p class="intro-subtitle">Digital Transformation, From <span style="color: red; font-weight:bold">Paper</span> to <span
+                    <p class="intro-subtitle">Digital Transformation, From <span
+                            style="color: red; font-weight:bold">Paper</span> to <span
                             style="color:chartreuse; font-weight:bold">Paperless</span></p>
                     <a href="#services" class="btn-get-started scrollto">Get Started</a>
                 </div>
@@ -19,42 +20,3 @@
         </div>
     </div>
 </div><!-- End Intro Section -->
-
-<!--
-<section id="intro">
-    <div class="intro-container">
-        <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
-
-            <ol class="carousel-indicators"></ol>
-
-            <div class="carousel-inner" role="listbox">
-                {% if carousel_items %}
-                {% for item in carousel_items %}
-                <div class="carousel-item {% if (item['is_active']) %} active {% endif %}">
-                    <div class="carousel-background"><img src="{{ item['image_src'] }}" alt=""></div>
-                    <div class="carousel-container">
-                        <div class="carousel-content">
-                            <h2>{{ item['title'] }}</h2>
-                            <p>{{ item['caption'] }}</p>
-                            <a href="#services" class="btn-get-started scrollto">Get Started</a>
-                        </div>
-                    </div>
-                </div>
-                {% endfor %}
-                {% endif %}
-            </div>
-
-            <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon ion-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-
-            <a class="carousel-control-next" href="#introCarousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon ion-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-
-        </div>
-    </div>
-</section-->
-<!-- #intro -->
