--- a/website_4cs/templates/includes/css.html
+++ b/website_4cs/templates/includes/css.html
@@ -1,5 +1,4 @@
-    <link type="text/css" rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700">
+    <link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/fonts.css">
     <link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/animate.min.css">
