fix: about us footer link

--- a/website_4cs/templates/includes/footer/4cs_footer.html
+++ b/website_4cs/templates/includes/footer/4cs_footer.html
@@ -12,7 +12,7 @@
                     <h4>Useful Links</h4>
                     <ul>
                         <li><i class="ion-ios-arrow-right"></i> <a href="/#">Home</a></li>
-                        <li><i class="ion-ios-arrow-right"></i> <a href="/#intro">About us</a></li>
+                        <li><i class="ion-ios-arrow-right"></i> <a href="/#about">About us</a></li>
                         <li><i class="ion-ios-arrow-right"></i> <a href="/#services">Our Services</a></li>
                         <li><i class="ion-ios-arrow-right"></i> <a href="/TermsAndConditions">Terms and Conditions</a></li>
                     </ul>
