--- a/website_4cs/templates/includes/footer/4cs_footer.html
+++ b/website_4cs/templates/includes/footer/4cs_footer.html
@@ -5,7 +5,7 @@
 
                 <div class="col-lg-3 col-md-6 footer-info">
                     <h3>4C Solutions</h3>
-                    <p>We are professionals to support your buisness needs and improve your operational performance.</p>
+                    <p>We are professionals to support your business needs and improve your operational performance.</p>
                 </div>
 
                 <div class="col-lg-3 col-md-6 footer-links">
