Logo: Update Logo

--- a/website_4cs/templates/includes/navbar/4cs_navbar.html
+++ b/website_4cs/templates/includes/navbar/4cs_navbar.html
@@ -3,7 +3,7 @@
         <!-- h1><a href="/#home" class="scrollto">4C Solutions</a></h1-->
         <h1 class="logo mr-auto">
             <a href="/#home">
-                <img src="/assets/website_4cs/images/android-icon-48x48.png" alt="" class="img-fluid"> 4C Solutions
+                4C Soluti<img src="/assets/website_4cs/images/android-icon-36x36.png" alt="" class="img-fluid">ns
             </a>
         </h1>
     </div>
