--- a/website_4cs/templates/includes/intro/intro.html
+++ b/website_4cs/templates/includes/intro/intro.html
@@ -3,7 +3,7 @@
 ============================-->
 
 <!-- ======= Intro Section ======= -->
-<div id="home" class="intro route bg-image" style="background-image: url(/assets/website_4cs/images/intro-bg.png)">
+<div id="home" class="intro route bg-image" style="background-image: url(/assets/website_4cs/images/intro-bg.jpg)">
     <div class="overlay-itro"></div>
     <div id="particles-js">
         <div class="intro-content display-table">
